# digital-transmission-essays

./: .gitignore  README.md  create_channel.py  debug_constellation.py  debug_ofdm.py  load_mat_test.py  main.py  pyproject.toml  test_channel_fix.py  test_ofdm_full.py  verify_gray_code.py
config/: simulation_settings.json
config/channel_models/: Lin-Phoong_P1.txt  Lin-Phoong_P2.txt
src/bits_generator/: base.py
src/channel/: base.py  enums.py  factory.py
src/configuration/: base.py  enums.py
src/equalization/: base.py  factory.py
src/modulation/: base.py
src/simulation/: base.py
src/symbol_mapping/: base.py  factory.py
