[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-transmission-essays"
version = "0.1.0"
description = "Simulations and analysis for Digital Transmission course projects (OFDM, OTFS, AFDM, BER vs SNR)"
authors = [
    { name = "Jomar Júnior de Souza Pereira", email = "jomarjunior@poli.ufrj.br" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.25",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "sympy>=1.12",
    "notebook>=7.0",
    "pydantic (>=2.11.9,<3.0.0)",
]

[tool.poetry]
packages = [
    { include = "configuration", from = "src" },
    { include = "bits_generator", from = "src" },
    { include = "symbol_mapping", from = "src" },
    { include = "modulation", from = "src"},
    { include = "channel", from = "src" },
    { include = "equalization", from = "src" },
]

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = false

[tool.pylint.main]
# Enable basic linting
load-plugins = ["pylint.extensions.mccabe", "pylint.extensions.docparams"]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
]

[tool.pylint.format]
max-line-length = 100

[tool.setuptools.packages.find]
where = ["src"]

[tool.jupyter]
notebook_dir = "notebooks"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["digital_transmission_essays"]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "pylint>=3.0",
    "isort>=5.12",
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]
